# -1

./: .gitignore  Agents.md  MODELS.md  README.md  diag.py  download_model.py  install.bat  pyproject.toml  restart.bat  verify_fix.py
.launcher/: config.json
.npm-cache/_npx/a3241bba59c344f5/: package-lock.json
.npm-cache/_npx/ab5cd9f6d13a2312/: package-lock.json
.npm-cache/_npx/e41f203b7505f1fb/: package-lock.json
.playwright-cli/: page-2026-03-27T07-47-25-328Z.yml  page-2026-03-27T07-47-26-293Z.yml  page-2026-03-27T10-11-17-998Z.yml  page-2026-03-27T11-40-01-225Z.yml  page-2026-03-27T12-03-01-060Z.yml
design-system/manga-enhancement-console/: MASTER.md
design-system/漫画画质提升启动器/: MASTER.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
packaging/: launcher.spec  launcher_entry.py
scripts/: build-launcher.ps1
src/mobi_manga_app/: analyze.py  api.py  cli.py  config.py  dashboard.py  enhance.py  job_store.py  launcher.py  merge.py  models.py  pipeline.py  repack.py  tools.py  unpack.py  utils.py  workflow.py
src/mobi_manga_app/enhancers/: __init__.py  _fix_basicsr.py  base.py  opencv_enhancer.py  realesrgan_anime_enhancer.py  realesrgan_enhancer.py  registry.py  waifu2x_enhancer.py
tools/: batch_balanced_cbz.py  kindleunpack_cli.py
